--- a/tootoo3/dev-custom/tootoo3-prediqtiv.html
+++ b/tootoo3/dev-custom/tootoo3-prediqtiv.html
@@ -2,7 +2,7 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title></title>
+<title>predIQtiv</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
@@ -78,22 +78,22 @@ a { color: blue; }
 	MNU.tableOfContents =
 
 `
-## predIQtiv
+### predIQtiv
 * [predIQtiv home page]( #README.md )
 * [Copyright and license]( #license.md )
-## eyeCue
+### eyeCue
 * [eyeCue Read Me]( #eye-cue/README.md )
     * [eyeCue Replay Read Me](#eye-cue/replay/README.md )
     * [eyeCue Realtime Read]( #eye-cue/realtime/README.md )
-## Trades
+### Trades
 * [Trades Get Read Me]( #trades-get/README.md )
-## Tweets
+### Tweets
 * [Tweets Read Me]( #tweets/README.md )
-## White Papers
+### White Papers
 * [White Papers Read Me]( #white-papers/README.md )
     * [Markets, Outliers and Data Normalization]( #white-papers/outliers-data-normlization.md )
     * [Code, Styling and Abstraction]( #white-papers/code-styling-abstraction.md )
-## Device Parameters Test
+### Device Parameters Test
 * [Device Parameters Test Read Me]( #device-parameters-test/README.md )
 `;
 
