--- a/tootoo3/utilities/gather-files-into-one-r4.html
+++ b/tootoo3/utilities/gather-files-into-one-r4.html
@@ -4,7 +4,7 @@
 <meta charset=utf-8 >
 <title></title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Basic slide in and slide out menu with three bar icon that adjusts for small screen size.' >
+<meta name=description content='combine multiple tootoo files into one file.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 <meta name=date content='2017-04-24' >
 </head>
@@ -15,15 +15,19 @@
 	var title, fileNameHtm, fileNameCss;
 
 	fileNameHtm = '../dev/tootoo3-basic.html';
-//	fileNameHtm = '../examples-r2/tootoo2-prediqtiv.html';
+	fileTitle = 'tootoo3-all-in-one.html';
+
+//	fileNameHtm = '../dev-custom/tootoo3-prediqtiv.html';
+//	fileTitle = 'tootoo3-all-in-one-prediqtiv.html';
+
 //	fileNameHtm = '../examples/tootoo2-leader-photos.html';
 
-	fileNameCss = '../r2/css.js';
-	fileNameCss = '../examples/css-prediqtiv.js';
+
+	fileNameCss = '../dev/style3.css';
+//	fileNameCss = '../examples/css-prediqtiv.js';
 
 	files = [
 
-		'../dev/styles3.css',
 		'../dev/tootoo3.js',
 		'../dev/menu3.js',
 		'../dev/contents3.js',
@@ -44,7 +48,7 @@
 
 		css = document.body.appendChild( document.createElement('style') );
 		css.innerHTML =
-			'body { font: 12pt monospace; margin: 0; }' +
+			'html, body { font: 12pt monospace; height:100%; margin: 0; }' +
 			'a { color: crimson; text-decoration: none; }' +
 			'a:hover { text-decoration: underline; }' +
 
@@ -60,7 +64,7 @@
 			'#bars { color: crimson; cursor: pointer; font-size: 24pt; text-decoration: none; }' +
 			'#container { left: 0; position: absolute; transition: left 1s; width: 100%;}' +
 
-			'#contents { border: 1px #ccc solid; left: 375px; max-width: 800px; position: absolute; }' +
+			'#contents { border: 1px #ccc solid; height: 900px; left: 375px; max-width: 800px; position: absolute; }' +
 
 			'#hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px; }' +
 			'#hamburger h2 { margin: 0; }' +
@@ -106,9 +110,9 @@
 				'<div id=bars title="Click this hamburger to slide the menu" > &#9776 </div>' +
 			'</div>' +
 
-			'<div id=contents >' +
+			'<textarea id=contents style=height:900px;width:900px;>' +
 
-			'</div>' +
+			'</textarea>' +
 
 		'';
 
@@ -124,9 +128,9 @@
 
 		htm = xhr.target.response;
 
-		htm = htm.replace( '<title>', '<title>' + title );
+		requestFile( '../dev/README.md', callbackRme );
 
-		requestFile( '../r2/README.md', callbackRme );
+		contents.innerText = htm;
 
 
 	}
@@ -146,13 +150,21 @@
 
 		css = xhr.target.response;
 
-		htm = htm.replace( '<script src=' + fileNameCss + ' >', '<script>' +
+		let strOld = /<link rel=stylesheet href=..\/dev\/style3.css >/;
 
-			'\n /* \n\n' + rme + '\n\n */\n' +
-			'// css.js inserted\n' +
-			css );
+		let strNew =
 
-		requestFile( files[ 1 ], callback1 );
+			'<!--' +
+				'\n' + rme + '\n' +
+			'-->\n' +
+			'<style>\n' +
+				css + '\n\n' +
+			'</style>\n' +
+			'';
+
+		htm = htm.replace( strOld, strNew );
+
+		requestFile( files[ 0 ], callback1 );
 
 		contents.innerText = htm;
 
@@ -163,27 +175,34 @@
 
 		var txt = xhr.target.response;
 
-		htm = htm.replace( '<script src=' + files[ 1 ]  + ' >',
+		htm = htm.replace(
 
-			'<script>' + '\n// ' + files[ 1 ] + ' inserted\n' + txt
+			'<script src=' + files[ 0 ]  + ' >',
+
+			'<script>\n// ' + files[ 0 ] + ' inserted\n\n' + txt
+
 		);
 
-		requestFile( files[ 2 ], callback2 );
+		requestFile( files[ 1 ], callback2 );
 
-		contents.innerText = htm;
+//		contents.innerText = htm;
 
 	}
+
 
 	function callback2( xhr ) {
 
 		var txt = xhr.target.response;
 
-		htm = htm.replace( '<script src=' + files[ 2 ] + ' >',
+		htm = htm.replace(
 
-			'<script>' + '\n// ' + files[ 2 ] + ' inserted\n' + txt
+			'<script src=' + files[ 1 ] + ' >',
+
+			'<script>\n// ' + files[ 1 ] + ' inserted\n\n' + txt
+
 		);
 
-		requestFile( files[ 3 ], callback3 );
+		requestFile( files[ 2 ], callback3 );
 
 //		contents.innerText = htm;
 
@@ -194,77 +213,18 @@
 
 		var txt = xhr.target.response;
 
-		htm = htm.replace( '<script src=' + files[ 3 ] + ' >',
+		htm = htm.replace(
 
-			'<script>' + '\n// ' + files[ 3 ] + ' inserted\n' + txt
+			'<script src=' + files[ 2 ] + ' >',
+
+			'<script>\n// ' + files[ 2 ] + ' inserted\n\n' + txt
+
 		);
-
-		requestFile( files[ 4 ], callback4 );
 
 		contents.innerText = htm;
 
 	}
 
-	function callback4( xhr ) {
-
-		txt = xhr.target.response;
-
-		htm = htm.replace( '<script src=' + files[ 4 ] + ' >',
-
-			'<script>' + '\n// ' + files[ 4 ] + ' inserted\n' + txt
-		);
-
-		requestFile( files[ 5 ], callback5 );
-
-//		contents.innerText = htm;
-
-	}
-
-	function callback5( xhr ) {
-
-		txt = xhr.target.response;
-
-		htm = htm.replace( '<script src=' + files[ 5 ] + ' >',
-
-			'<script>' + '\n// ' + files[ 5 ] + ' inserted\n' + txt
-		);
-
-		requestFile( files[ 6 ], callback6 );
-
-//		contents.innerText = txt;
-
-	}
-
-	function callback6( xhr ) {
-
-		txt = xhr.target.response;
-
-		htm = htm.replace( '<script src=' + files[ 6 ] + ' >',
-
-			'<script>' + '\n// ' + files[ 6 ] + ' inserted\n' + txt
-		);
-
-//		requestFile( files[ 7 ], callback7 );
-
-		contents.innerText = htm;
-
-	}
-
-
-	function callback7( xhr ) {
-
-		txt = xhr.target.response;
-
-		txt = htm.replace( '<script src=' + files[ 5 ] ,
-
-			'<script>' + '\n// ' + files[ 7 ] + ' inserted\n' + txt
-		);
-
-//		requestFile( files[ 6 ], callback6 );
-
-//		contents.innerText = txt;
-
-	}
 
 
 	function requestFile( fileName, callback, section ) {
@@ -286,10 +246,10 @@
 		let date, blob, a;
 
 		date = new Date();
-		blob = new Blob( [ contents.innerText ] );
+		blob = new Blob( [ contents.value ] );
 		a = document.body.appendChild( document.createElement( 'a' ) );
 		a.href = window.URL.createObjectURL( blob );
-		a.download = 'tootoo-test.html';
+		a.download = fileTitle;
 		a.click();
 		a = null;
 
