--- a/tootoo3/dev/tootoo3-basic.html
+++ b/tootoo3/dev/tootoo3-basic.html
@@ -60,7 +60,7 @@
 
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
 
-	let protocol, usr;
+	let protocol, usr, firstDot, path;
 
 	protocol = location.protocol;
 
@@ -71,9 +71,11 @@
 		usr = usr.slice( usr.lastIndexOf( '/' ) + 1 );
 		path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
 
-	} else if ( protocol === 'https:' ) {
+	} else if ( protocol === 'http:' ) {
 
-		usr = location.host.slice( 0, location.host.indexOf( '.' ) );
+		firstDot = location.hostname.indexOf( '.github.io' );
+		usr = location.hostname.slice( 0, firstDot );
+		path = location.pathname.slice( 1, location.pathname.lastIndexOf( '/' )  );
 
 	}
 
@@ -91,7 +93,7 @@
 
 	function init() {
 
-		mnuTitle.innerHTML = document.title;
+		mnuTitle.innerHTML = user.user;
 		mnuTagline.innerHTML = '<small><p>' + document.head.querySelector( "[name=description]" ).content + '</p></small>';
 
 		TOO.initUser( user );
