--- a/tootoo3/dev/tootoo3-select.html
+++ b/tootoo3/dev/tootoo3-select.html
@@ -59,7 +59,7 @@
 
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
 
-	let protocol, usr;
+	let protocol, usr, firstDot, path;
 
 	protocol = location.protocol;
 
@@ -70,7 +70,7 @@
 		usr = usr.slice( usr.lastIndexOf( '/' ) + 1 );
 		path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
 
-	} else if ( protocol === 'http:' ) {
+	} else if ( protocol.includes( 'http' ) {
 
 		firstDot = location.hostname.indexOf( '.github.io' );
 		usr = location.hostname.slice( 0, firstDot );
