--- a/tootoo3/dev/tootoo3-basic.html
+++ b/tootoo3/dev/tootoo3-basic.html
@@ -71,7 +71,7 @@
 		usr = usr.slice( usr.lastIndexOf( '/' ) + 1 );
 		path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
 
-	} else if ( protocol.includes( 'http' ) {
+	} else if ( protocol.includes( 'http' ) ) {
 
 		firstDot = location.hostname.indexOf( '.github.io' );
 		usr = location.hostname.slice( 0, firstDot );
