--- a/tootoo3/all-in-one/tootoo3-all-in-one.html
+++ b/tootoo3/all-in-one/tootoo3-all-in-one.html
@@ -777,7 +777,7 @@ console.log( '', TOO.files, path );
 
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
 
-	let protocol, usr;
+	let protocol, usr, firstDot, path;
 
 	protocol = location.protocol;
 
@@ -788,9 +788,11 @@ console.log( '', TOO.files, path );
 		usr = usr.slice( usr.lastIndexOf( '/' ) + 1 );
 		path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
 
-	} else if ( protocol === 'https:' ) {
+	} else if ( protocol.includes( 'http' ) ) {
 
-		usr = location.host.slice( 0, location.host.indexOf( '.' ) );
+		firstDot = location.hostname.indexOf( '.github.io' );
+		usr = location.hostname.slice( 0, firstDot );
+		path = location.pathname.slice( 1, location.pathname.lastIndexOf( '/' )  );
 
 	}
 
@@ -808,7 +810,7 @@ console.log( '', TOO.files, path );
 
 	function init() {
 
-		mnuTitle.innerHTML = document.title;
+		mnuTitle.innerHTML = user.user;
 		mnuTagline.innerHTML = '<small><p>' + document.head.querySelector( "[name=description]" ).content + '</p></small>';
 
 		TOO.initUser( user );
