add index files

--- a/tootoo3/all-in-one/tootoo3-all-in-one.html
+++ b/tootoo3/all-in-one/tootoo3-all-in-one.html
@@ -86,16 +86,22 @@ summary h3 { display: inline; }
 
 		window.addEventListener ( 'hashchange', TOO.onHashChange, false );
 
+		if ( MNU.tableOfContents ) {
+
+				txt = '<div>' +
+					'<button onclick=TOO.setMenu=TOO.setMenuContents;TOO.setMenu(); >Table of Contents</button>' +
+					' <button onclick=TOO.setMenu=TOO.setMenuDefault;TOO.setMenu(); >All Files</button>' +
+				'</div>' + b;
+
+			} else { txt = ''; }
+
 		mnuContents.innerHTML =
 
 			'<details open >' +
 
 				'<summary><h3 id=menuTitle >Contents</h3></summary>' +
 
-				'<div>' +
-					'<button onclick=TOO.setMenu=TOO.setMenuContents;TOO.setMenu(); >Table of Contents</button>' +
-					' <button onclick=TOO.setMenu=TOO.setMenuDefault;TOO.setMenu(); >All Files</button>' +
-				'</div>' + b +
+				txt +
 
 				'<div id=breadcrumbs ></div>' +
 				'<div id=menuItems ></div>' +
@@ -484,7 +490,7 @@ summary h3 { display: inline; }
 
 		if ( path === undefined ) {
 
-			contents.innerHTML = '<center>No files in this folder</center>';
+			contents.innerHTML = '<center style=top:50%; >No files in this folder</center>';
 
 			return;
 
@@ -802,7 +808,8 @@ console.log( '', TOO.files, path );
 		subText : '',
 		repo : usr + '.github.io',
 		branch : 'master',
-		folder : path
+		folder : path,
+		defaultFile: 'README.md'
 	};
 
 
