--- a/tootoo3/dev/index.html
+++ b/tootoo3/dev/index.html
@@ -6,8 +6,8 @@
 <body>
 <script>
 
-//	window.location.href = 'tootoo3-basic.html' + location.hash;
-	window.location.href = 'tootoo3-basic.html#tootoo3.js';
+	window.location.href = 'tootoo3-basic.html' + location.hash;
+//	window.location.href = 'tootoo3-basic.html#tootoo3/dev/test.md';
 
 
 </script>
