--- a/tootoo3/dev-custom/tootoo3-jaanga.html
+++ b/tootoo3/dev-custom/tootoo3-jaanga.html
@@ -2,7 +2,7 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TooToo3.1 Basic</title>
+<title>Jaanga</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Jaanga - your 3D happy place.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
