--- a/tootoo3/dev-custom/tootoo3-pushme-pullyou.html
+++ b/tootoo3/dev-custom/tootoo3-pushme-pullyou.html
@@ -55,37 +55,16 @@
 
 	</div>
 
-<script defer >
+<script>
 
 // Copyright 2017 Pushme Pullyou authors ~ MIT license
 
-	let protocol, usr, firstDot, path;
-
-	protocol = location.protocol;
-
-	if ( protocol === 'file:' ) {
-
-		firstDot = location.pathname.indexOf( 'github.io' );
-		usr = location.pathname.slice( 0, firstDot - 1 );
-		usr = usr.slice( usr.lastIndexOf( '/' ) + 1 );
-
-		path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
-
-	} else if ( protocol.includes( 'http' ) ) {
-
-		firstDot = location.hostname.indexOf( '.github.io' );
-		usr = location.hostname.slice( 0, firstDot );
-		path = location.pathname.slice( 1, location.pathname.lastIndexOf( '/' )  );
-
-	}
-
-
 	let user = {
-		user : usr,
+		user : 'pushme-pullyou',
 		subText : 'Hello, there',
-		repo : usr + '.github.io',
+		repo : 'pushme-pullyou.github.io',
 		branch : 'master',
-		folder : path,
+		folder : '',
 	};
 
 
