--- a/tootoo3/dev-custom/tootoo3-pushme-pullyou.html
+++ b/tootoo3/dev-custom/tootoo3-pushme-pullyou.html
@@ -2,7 +2,7 @@
 <html lang=en >
 <head>
 <meta charset=utf-8 >
-<title>TooToo3.1 Basic</title>
+<title>Pushme-PullYou</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
@@ -61,7 +61,7 @@
 
 	let user = {
 		user : 'pushme-pullyou',
-		subText : 'Hello, there',
+		subText : 'Browse & view real fast!',
 		repo : 'pushme-pullyou.github.io',
 		branch : 'master',
 		folder : '',
