--- a/tootoo3/utilities/make-all-in-one-r1.html
+++ b/tootoo3/utilities/make-all-in-one-r1.html
@@ -14,15 +14,15 @@
 
 	var title, fileNameHtm, fileNameCss, files;
 
-	fileNameHtm = '../dev/tootoo3-basic.html';
-	fileTitle = 'tootoo3-2-all-in-one.html';
+//	fileNameHtm = '../dev/tootoo3-basic.html';
+//	fileTitle = 'tootoo3-2-all-in-one.html';
 
-//	fileNameHtm = '../dev-custom/tootoo3-prediqtiv.html';
-//	fileTitle = 'tootoo3-all-in-one-prediqtiv.html';
+	fileNameHtm = '../dev-custom/tootoo3-prediqtiv.html';
+	fileTitle = 'tootoo3-all-in-one-prediqtiv.html';
 
 
 //	fileNameHtm = '../dev-custom/tootoo3-pushme-pullyou.html';
-//	fileTitle = 'tootoo3-2-all-in-one-pullyou.html';
+//	fileTitle = 'tootoo3-2-all-in-one-pushme-pullyou.html';
 
 //	fileNameHtm = '../examples/tootoo3-leader-photos.html';
 
