--- a/tootoo/index.html
+++ b/tootoo/index.html
@@ -6,8 +6,8 @@
 <body>
 <script>
 
-	window.location.href = './r7/tootoo.html' + location.hash;
-
+//	window.location.href = '../tootoo3/dev/tootoo3-basic.html' + location.hash;
+	window.location.href = '../tootoo3/dev/tootoo3-basic.html#../../tootoo/README.md';
 </script>
 </body>
 </html>
