--- a/tootoo1/index.html
+++ b/tootoo1/index.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-	window.location.href = 'tootoo3-2-all-in-one-pushme-pullyou.html' + location.hash;
+	window.location.href = './r7/tootoo.html' + location.hash;
 
 </script>
 </body>
