--- a/tootoo3/dev-custom/tootoo3-prediqtiv.html
+++ b/tootoo3/dev-custom/tootoo3-prediqtiv.html
@@ -95,6 +95,7 @@ a { color: blue; }
     * [Code, Styling and Abstraction]( #white-papers/code-styling-abstraction.md )
 ### Device Parameters Test
 * [Device Parameters Test Read Me]( #device-parameters-test/README.md )
+### [Blog Posts]( https://github.com/prediqtiv/prediqtiv.github.io/labels/blog%20post )
 `;
 
 
