--- a/tootoo3/dev/tootoo3-select.html
+++ b/tootoo3/dev/tootoo3-select.html
@@ -97,8 +97,8 @@
 
 		SEL.initSelectUsers();
 
-
-		selUser.selectedIndex = Math.floor( Math.random() * users.keys.length );
+//		selUser.selectedIndex = Math.floor( Math.random() * users.keys.length );
+		selUser.selectedIndex = 0;
 
 		TOO.initUser( users[ selUser.value ] );
 
