--- a/tootoo3/dev-custom/tootoo3-prediqtiv.html
+++ b/tootoo3/dev-custom/tootoo3-prediqtiv.html
@@ -4,9 +4,9 @@
 <meta charset=utf-8 >
 <title>predIQtiv</title>
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
-<meta name=description content='Browse and view files on GitHub with remarkable ease.' >
+<meta name=description content='A variety of tools to browse and view all S&P 500 symbols all at once.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-05-07' >
+<meta name=date content='2017-05-14' >
 <link rel=stylesheet href=../dev/style3.css >
 <style>
 a { color: blue; }
@@ -89,12 +89,12 @@ a { color: blue; }
 * [Trades Get Read Me]( #trades-get/README.md )
 ### Tweets
 * [Tweets Read Me]( #tweets/README.md )
+### Company URLs
+* [URL Get Read Me]( #url-get/README.md )
 ### White Papers
 * [White Papers Read Me]( #white-papers/README.md )
     * [Markets, Outliers and Data Normalization]( #white-papers/outliers-data-normlization.md )
     * [Code, Styling and Abstraction]( #white-papers/code-styling-abstraction.md )
-### Device Parameters Test
-* [Device Parameters Test Read Me]( #device-parameters-test/README.md )
 ### [Blog Posts]( https://github.com/prediqtiv/prediqtiv.github.io/labels/blog%20post )
 `;
 
