--- a/tootoo3/dev/index.html
+++ b/tootoo3/dev/index.html
@@ -6,8 +6,10 @@
 <body>
 <script>
 
-	window.location.href = 'tootoo3-basic.html' + location.hash;
+//	window.location.href = 'tootoo3-basic.html' + location.hash;
 //	window.location.href = 'tootoo3-basic.html#tootoo3/dev/test.md';
+	window.location.href = 'tootoo3-basic.html#tootoo3/README.md';
+
 
 
 </script>
