--- a/tootoo3/index.html
+++ b/tootoo3/index.html
@@ -6,8 +6,8 @@
 <body>
 <script>
 
-	window.location.href = './dev/tootoo3-basic.html' + location.hash;
-
+//	window.location.href = './dev/tootoo3-basic.html' + location.hash;
+	window.location.href = './dev/tootoo3-basic.html#tootoo3/README.md';
 </script>
 </body>
 </html>
