--- a/tootoo3/utilities/gather-files-into-one-r4.html
+++ b/tootoo3/utilities/gather-files-into-one-r4.html
@@ -6,7 +6,7 @@
 <meta name=viewport content='width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' >
 <meta name=description content='combine multiple tootoo files into one file.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
-<meta name=date content='2017-04-24' >
+<meta name=date content='2017-05-14' >
 </head>
 <body>
 <script>
@@ -17,8 +17,8 @@
 	fileNameHtm = '../dev/tootoo3-basic.html';
 	fileTitle = 'tootoo3-all-in-one.html';
 
-//	fileNameHtm = '../dev-custom/tootoo3-prediqtiv.html';
-//	fileTitle = 'tootoo3-all-in-one-prediqtiv.html';
+	fileNameHtm = '../dev-custom/tootoo3-prediqtiv.html';
+	fileTitle = 'tootoo3-all-in-one-prediqtiv.html';
 
 //	fileNameHtm = '../examples/tootoo2-leader-photos.html';
 
