--- a/tootoo3/dev/readme.html
+++ b/tootoo3/dev/readme.html
@@ -8,7 +8,7 @@
 // This script allows you to read a markdown file locally
 // - so you can see what it looks like before you send it to GitHub.
 
-	window.location.href = './tootoo3-basic.html#@@@../dev/README.md';
+	window.location.href = './tootoo3-basic.html#@@@../dev/test.md';
 
 </script>
 <div
