--- a/tootoo3/dev/tootoo3-basic.html
+++ b/tootoo3/dev/tootoo3-basic.html
@@ -79,7 +79,8 @@
 
 	}
 
-console.log( 'u', usr, 'p', path );
+//console.log( 'u', usr, 'p', path );
+
 	let user = {
 		user : usr,
 		subText : 'Hello, there',
