--- a/tootoo/index.html
+++ b/tootoo/index.html
@@ -7,7 +7,7 @@
 <script>
 
 //	window.location.href = '../tootoo3/dev/tootoo3-basic.html' + location.hash;
-	window.location.href = '../tootoo3/dev/tootoo3-basic.html#../../tootoo/README.md';
+	window.location.href = './r3/dev/tootoo3-basic.html#tootoo/README.md';
 </script>
 </body>
 </html>
