--- a/tootoo/r3/all-in-one/index.html
+++ b/tootoo/r3/all-in-one/index.html
@@ -6,7 +6,7 @@
 <body>
 <script>
 
-	window.location.href = 'tootoo3-1-all-in-one.html' + location.hash;
+	window.location.href = 'tootoo3-all-in-one-basic.html' + location.hash;
 
 </script>
 </body>
