--- a/tootoo/r3/all-in-one/tootoo3-all-in-one-basic.html
+++ b/tootoo/r3/all-in-one/tootoo3-all-in-one-basic.html
@@ -7,26 +7,26 @@
 <meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 
-<meta name=date content='2017-5-16 22:8' >
+<meta name=date content='2017-5-21 18:28' >
 
 <!--
 
-TooToo3 Read Me
+TooToo Read Me
 ===
 
 TooToo is a JavaScript app that helps you browse through GitHub repositories and read or access data in files really quickly and easily.
 
-It's part of the Pushme-Pullyou / https://pushme-pullyou.github.io/ collection of JavaScript files.
+It's part of the Pushme-Pullyou collection of JavaScript files: https://pushme-pullyou.github.io/
 
-See TooToo Read Me / https://pushme-pullyou.github.io/tootoo3/
+See TooToo Read Me:/ https://pushme-pullyou.github.io/tootoo/
 
 
-Copyright © 2017 Pushme Pullyou authors. MIT License
+Copyright © 2017 Pushme Pullyou authors. MIT License.
 
 -->
 <style>
 
-html, body { font: 12pt monospace; height: 100%; margin: 0; }
+html, body { font: 12pt monospace; height: 100%; margin: 0;  overflow: hidden; }
 a { color: crimson; text-decoration: none; }
 a:hover { text-decoration: underline; }
 a:active { background-color: yellow; }
@@ -40,26 +40,32 @@ summary h3 { display: inline; }
 
 #bars { color: crimson; cursor: pointer; font-size: 24pt; text-decoration: none; }
 
-#container {  height: 100%; left: 0; position: absolute; transition: left 1s; width: 100%; }
+#container { border: 0px #0f0 solid; height: 100%; left: 0; position: absolute; overflow: hidden; transition: left 1s; width: 100%; }
 
-#contents { border: 0px #ccc solid; height: 100%; margin-left: 325px; overflow-x: hidden; position: absolute; width: 100vw; }
+/* #contents { border: 0px #ccc solid; height: 100%; margin-left: 325px; overflow-x: hidden; position: absolute; width: 100vw; } */
+#contents { border: 0px #f00 solid; height: 100%; left: 325px; overflow-x: hidden; position: absolute; max-width: calc( 100% - 325px); }
 
 #butEditFile { background-color: #555; color: #fff; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: 20px; }
 #butEditFile a { text-decoration: none; color: #fff; }
 #butEditFile:hover { cursor: pointer; opacity: 1; }
 
+#butNextFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: 50%; }
+#butPreviousFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; margin-left: 350px; top: 50%; }
+
+#butNextFile a, #butPreviousFile a { text-decoration: none; color: #888; }
+#butNextFile:hover, #butPreviousFile:hover { cursor: pointer; opacity: 1; }
+
+#divMD {border: 0px orange solid; margin: 0 auto; max-width: 800px; overflow-x: hidden; position: adsolute; }
+
 #hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px;  z-index: 1 }
 #hamburger h2, #menu h2, #menu h4 {margin: 0; }
+
+#ifr { border: 0px yellow solid; height: 100%; width: 100%; }
 
 #menu { background-color: #eee; border: 1px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }
 #menu ul { margin:0; padding-left:20px; }
 #menuBreadcrumbs h2, #menuBreadcrumbs h3 { font-size: 14pt; margin: 0; }
 
-#butNextFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top:  50%; }
-#butPreviousFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; margin-left: 350px; top: 50%; }
-
-#butNextFile a, #butPreviousFile a { text-decoration: none; color: #888; }
-#butNextFile:hover, #butPreviousFile:hover { cursor: pointer; opacity: 1; }
 
 
 
@@ -89,7 +95,10 @@ summary h3 { display: inline; }
 		window.addEventListener ( 'hashchange', TOO.onHashChange, false );
 
 
-		if ( location.hash.includes( '@@@' ) ) { // read local files ~ used by readme.html to help you view local files while you edit them
+		if ( location.hash.includes( '@@@' ) ) {
+
+// read local files ~ used by readme.html to help you view local files while you edit them
+// has many issues. May not be worth keeping
 
 			TOO.urlGHPages = './';
 			location.hash = location.hash.replace( '@@@', '' );
@@ -257,7 +266,7 @@ summary h3 { display: inline; }
 
 	TOO.setDefaultContents = function() {
 
-//		let txt, start, path, p;
+		let txt, start, path, p;
 
 
 // change to: TOO.files.includes( 'readme.md' )
@@ -566,8 +575,9 @@ summary h3 { display: inline; }
 
 		contents.innerHTML =
 //			'<iframe id=ifr src=' + url + ' width=' + ( window.innerWidth - 325 ) + ' height=' + ( window.innerHeight - 5 ) +
-			'<iframe id=ifr src=' + url + ' width=' + ( window.innerWidth - 325 ) + ' height=100% ' +
-			' style="border:0 none; " >' +
+//			'<iframe id=ifr src=' + url + ' width=' + ( window.innerWidth - 325 ) + ' height=100% ' +
+			'<iframe id=ifr src=' + url + ' > ' +
+//			' style="border:0 none; " >' +
 		'<iframe>';
 
 	}
@@ -597,9 +607,7 @@ summary h3 { display: inline; }
 
 			contents.innerHTML =
 
-			'<div style="margin: 0 auto; width: 800px; position: relative;" >' +
-				text +
-			'</div>';
+			'<div id=divMD >' + text + '</div>';
 
 			contents.scrollTop = 0;
 
@@ -706,7 +714,9 @@ summary h3 { display: inline; }
 	CON.setHighlightAndButtons = function( path, gallery ) {
 
 		var index, el, col, folder, indexNext, indexPrevious;
+
 //highlight
+
 		if ( gallery ) {
 
 			index = TOO.files.indexOf( '!' + path );
@@ -815,17 +825,12 @@ summary h3 { display: inline; }
 
 	if ( protocol === 'file:' ) {
 
-		firstDot = location.pathname.indexOf( 'github.' );
+		firstDot = location.pathname.indexOf( 'github.io' );
 		usr = location.pathname.slice( 0, firstDot - 1 );
 		usr = usr.slice( usr.lastIndexOf( '/' ) + 1 );
 
-		pathName = location.pathname.slice( firstDot + 11, location.pathname.lastIndexOf( '/' )  );
-
-		repo = location.pathname.includes( '.github.io' ) ? usr + '.github.io' : pathName;
-		repo = location.pathname.includes( '.github.com' ) ? usr + '.github.com' : repo;
-
-		branch = pathName.includes( '.github.' ) ? 'master' : 'gh-pages';
-		path = pathName === repo ? '' : pathName;
+		path = location.pathname.slice( firstDot + 10, location.pathname.lastIndexOf( '/' )  );
+		repo = path.endsWith( '.gitgub.io' ) ? usr + '.github.io' : path;
 
 	} else if ( protocol.includes( 'http' ) ) {
 
@@ -835,13 +840,13 @@ summary h3 { display: inline; }
 
 	}
 
-console.log( 'u', usr, 'p', pathName, 'r', repo );
+console.log( 'u', usr, 'p', path, 'r', repo );
 
 	let user = {
 		user : usr,
 		subText : 'Hello, there',
-		repo : repo,
-		branch : branch,
+		repo : usr + '.github.io',
+		branch : 'master',
 		folder : path,
 	};
 
