add make github readme r1

--- a/tootoo/r3/all-in-one/tootoo3-all-in-one-basic.html
+++ b/tootoo/r3/all-in-one/tootoo3-all-in-one-basic.html
@@ -7,7 +7,7 @@
 <meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 
-<meta name=date content='2017-5-21 18:28' >
+<meta name=date content='2017-5-21 18:34' >
 
 <!--
 
@@ -785,7 +785,7 @@ summary h3 { display: inline; }
 			<h2>
 				<a href=http://pushme-pullyou.github.io title="Jaanga - your Github repo happy place" > &#x2766 </a><br>
 				<a id=mnuTitle href="" title="Click here to refresh this page" ></a>
-				~ <a href=index.html#readme.md onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>
+				~ <a href=index.html#README.md onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>
 			</h2>
 
 			<div class=popUp id=popHelp style=display:none; ><p>Hi there!</p>Click the i-in-circle, info icon for latest updates.</div>
