--- a/tootoo/r3/utilities/make-github-readme/index.html
+++ b/tootoo/r3/utilities/make-github-readme/index.html
@@ -1,1 +1,13 @@
-undefined
+<!doctype html>
+<html lang=en >
+<head>
+<meta charset=utf-8 >
+</head>
+<body>
+<script>
+
+window.location.href = 'make-github-readme-r1.html' + location.hash;
+
+</script>
+</body>
+</html>
