--- a/tootoo/r3/utilities/make-github-readme/make-github-readme-r1.html
+++ b/tootoo/r3/utilities/make-github-readme/make-github-readme-r1.html
@@ -261,7 +261,7 @@ console.log( '', filesData );
 
 		let blob, a;
 
-		blob = new Blob( [ index.value ] );
+		blob = new Blob( [ index.innerText ] );
 		a = document.body.appendChild( document.createElement( 'a' ) );
 		a.href = window.URL.createObjectURL( blob );
 		a.download = 'index.html';
