--- a/tootoo/r3/utilities/make-github-readme/make-github-readme-r1.html
+++ b/tootoo/r3/utilities/make-github-readme/make-github-readme-r1.html
@@ -211,7 +211,7 @@ console.log( '', filesData );
 		name = user.folder ? user.folder : user.url;
 		url = 'https://' + user.url + '/';
 
-		txt = '<a href="' + url  + '" >' + name + '</a> &raquo; ';
+		txt = '<a href="' + url  + '" >' + name + '<\/a> &raquo; ';
 
 		folders = user.path ? user.path.split( '/' ) : [] ;
 
