--- a/tootoo/r3/all-in-one-custom/make-github-readme-r1.html
+++ b/tootoo/r3/all-in-one-custom/make-github-readme-r1.html
@@ -22,7 +22,7 @@ var indexHTML =
 <body>
 <script>
 
-	window.location.href = './xxxxx.html' + location.hash;
+	window.location.href = '../xxxxx.html' + location.hash;
 
 <\/script>
 <\/body>
