--- a/tootoo/r3/all-in-one-custom/make-github-readme-r1.html
+++ b/tootoo/r3/all-in-one-custom/make-github-readme-r1.html
@@ -22,7 +22,7 @@ var indexHTML =
 <body>
 <script>
 
-	window.location.href = '../xxxxx.html' + location.hash;
+	window.location.href = './xxxxx.html' + location.hash;
 
 <\/script>
 <\/body>
@@ -108,7 +108,7 @@ console.log( 'u', usr, 'p', path, 'r', repo );
 			'<div id=menu >' +
 
 				'<h2>' +
-					'<a href=http://pushme-pullyou.github.io title="pushMe-pullYou - your con=ming and going happy place" > &#x2766 </a><br>' +
+					'<a href=http://pushme-pullyou.github.io title="pushMe-pullYou - your coming and going happy place" > &#x2766 </a><br>' +
 //					'<a href="" title="Click here to refresh this page" >' + document.title + '</a>' +
 					'<a href="" title="Click here to refresh this page" >' + location.pathname.split( '/' ).pop().slice( 0, -5).replace( /-/g, ' ' ) + '</a>' +
 					' ~ <a href=index.html#README.md onmouseover=popHelp.style.display=""; onmouseout=popHelp.style.display="none"; > &#x24D8; </a>' +
