--- a/tootoo/r3/all-in-one-custom/index.html
+++ b/tootoo/r3/all-in-one-custom/index.html
@@ -6,8 +6,8 @@
 <body>
 <script>
 
-window.location.href = './tootoo3-all-in-one-basic.html' + location.hash;
-
+//window.location.href = './tootoo3-all-in-one-basic.html' + location.hash;
+	window.location.href = '../../../index.html#tootoo/r3/all-in-one-custom/README.md';
 </script>
 </body>
 </html>
