--- a/tootoo/r3/dev-custom/tootoo3-pushme-pullyou.html
+++ b/tootoo/r3/dev-custom/tootoo3-pushme-pullyou.html
@@ -76,7 +76,11 @@
 ### DabDab
 * [Read Me]( #dabdab/README.md )
 ### TooToo
-* [Read Me]( #tootoo3/README.md )
+* [Read Me]( #tootoo/README.md )
+### Utilities
+* [Make Read Me Read Me]( #tootoo/r3/utilities/make-github-readme/README.md )
+* [Merge Files into one]( #tootoo/r3/utilities/merge-files-into-one/README.md )
+
 `;
 
 	init();
