--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
 <meta name=description content='Browse and view files on GitHub with remarkable ease.' >
 <meta name=keywords content='CSS,HTML,JavaScript,GitHub,FOSS' >
 
-<meta name=date content='2017-05-14' >
+<meta name=date content='2017-5-22 17:59' >
 
 <!--
 
-TooToo3 Read Me
+TooToo Read Me
 ===
 
 TooToo is a JavaScript app that helps you browse through GitHub repositories and read or access data in files really quickly and easily.
 
-It's part of the Pushme-Pullyou / https://pushme-pullyou.github.io/ collection of JavaScript files.
+It's part of the Pushme-Pullyou collection of JavaScript files: https://pushme-pullyou.github.io/
 
-See TooToo Read Me / https://pushme-pullyou.github.io/tootoo3/
+See TooToo Read Me:/ https://pushme-pullyou.github.io/tootoo/
 
 
-Copyright © 2017 Pushme Pullyou authors. MIT License
+Copyright © 2017 Pushme Pullyou authors. MIT License.
 
 -->
 <style>
 
-html, body { font: 12pt monospace; height: 100%; margin: 0; }
+html, body { font: 12pt monospace; height: 100%; margin: 0;  overflow: hidden; }
 a { color: crimson; text-decoration: none; }
 a:hover { text-decoration: underline; }
 a:active { background-color: yellow; }
@@ -40,26 +40,32 @@ summary h3 { display: inline; }
 
 #bars { color: crimson; cursor: pointer; font-size: 24pt; text-decoration: none; }
 
-#container {  height: 100%; left: 0; position: absolute; transition: left 1s; width: 100%; }
+#container { border: 0px #0f0 solid; height: 100%; left: 0; position: absolute; overflow: hidden; transition: left 1s; width: 100%; }
 
-#contents { border: 0px #ccc solid; height: 100%; margin-left: 325px; overflow-x: hidden; position: absolute; width: 100vw; }
+/* #contents { border: 0px #ccc solid; height: 100%; margin-left: 325px; overflow-x: hidden; position: absolute; width: 100vw; } */
+#contents { border: 0px #f00 solid; height: 100%; left: 325px; overflow-x: hidden; position: absolute; max-width: calc( 100% - 325px); }
 
 #butEditFile { background-color: #555; color: #fff; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: 20px; }
 #butEditFile a { text-decoration: none; color: #fff; }
 #butEditFile:hover { cursor: pointer; opacity: 1; }
 
+#butNextFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top: 50%; }
+#butPreviousFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; margin-left: 350px; top: 50%; }
+
+#butNextFile a, #butPreviousFile a { text-decoration: none; color: #888; }
+#butNextFile:hover, #butPreviousFile:hover { cursor: pointer; opacity: 1; }
+
+#divMD {border: 0px orange solid; margin: 0 auto; max-width: 800px; overflow-x: hidden; position: adsolute; }
+
 #hamburger { background-color: #eee; left: 325px; position: absolute; top: 20px;  z-index: 1 }
 #hamburger h2, #menu h2, #menu h4 {margin: 0; }
+
+#ifr { border: 0px yellow solid; height: 100%; width: 100%; }
 
 #menu { background-color: #eee; border: 1px #ccc solid; box-sizing:border-box; height: 100%; overflow-y: auto; padding: 0 10px; position: fixed; width: 325px; }
 #menu ul { margin:0; padding-left:20px; }
 #menuBreadcrumbs h2, #menuBreadcrumbs h3 { font-size: 14pt; margin: 0; }
 
-#butNextFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; right: 20px; top:  50%; }
-#butPreviousFile { color: #888; font-size: 36pt; opacity: 0.5; padding: 8px; position: fixed; margin-left: 350px; top: 50%; }
-
-#butNextFile a, #butPreviousFile a { text-decoration: none; color: #888; }
-#butNextFile:hover, #butPreviousFile:hover { cursor: pointer; opacity: 1; }
 
 
 
@@ -89,7 +95,10 @@ summary h3 { display: inline; }
 		window.addEventListener ( 'hashchange', TOO.onHashChange, false );
 
 
-		if ( location.hash.includes( '@@@' ) ) { // read local files ~ used by readme.html to help you view local files while you edit them
+		if ( location.hash.includes( '@@@' ) ) {
+
+// read local files ~ used by readme.html to help you view local files while you edit them
+// has many issues. May not be worth keeping
 
 			TOO.urlGHPages = './';
 			location.hash = location.hash.replace( '@@@', '' );
@@ -225,6 +234,7 @@ summary h3 { display: inline; }
 
 		}
 
+// not needed??
 		index = TOO.files.indexOf( 'readme.md');
 		readMe = index > -1 ? TOO.files[ index ] : '';
 		index = TOO.files.indexOf( 'README.md');
@@ -268,8 +278,8 @@ summary h3 { display: inline; }
 
 // uppercase README gets selected before lower case index
 
+			if ( p.endsWith( 'index.html' ) || p.endsWith( 'index.htm') ) { CON.getFileSetContents( path ); }
 			if ( p.endsWith( 'readme.md' ) ) { CON.getFileSetContents( path ); return; }
-			if ( p.endsWith( 'index.html' ) || p.endsWith( 'index.htm') ) { CON.getFileSetContents( path ); return; }
 
 		}
 
@@ -565,8 +575,9 @@ summary h3 { display: inline; }
 
 		contents.innerHTML =
 //			'<iframe id=ifr src=' + url + ' width=' + ( window.innerWidth - 325 ) + ' height=' + ( window.innerHeight - 5 ) +
-			'<iframe id=ifr src=' + url + ' width=' + ( window.innerWidth - 325 ) + ' height=100% ' +
-			' style="border:0 none; " >' +
+//			'<iframe id=ifr src=' + url + ' width=' + ( window.innerWidth - 325 ) + ' height=100% ' +
+			'<iframe id=ifr src=' + url + ' > ' +
+//			' style="border:0 none; " >' +
 		'<iframe>';
 
 	}
@@ -592,13 +603,25 @@ summary h3 { display: inline; }
 
 		function callbackMD( xhr ) {
 
-			text = CON.massageText( xhr.target.response );
+			response = xhr.target.response;
+
+			if ( response.includes( 'DOCTYPE') ) {
+
+console.log( '', response  );
+
+				contents.innerHTML = '<h1 style=text-align:center; >file not found</h1>';
+
+				return;
+
+			}
+
+
+
+			text = CON.massageText( response );
 
 			contents.innerHTML =
 
-			'<div style="margin: 0 auto; width: 800px; position: relative;" >' +
-				text +
-			'</div>';
+			'<div id=divMD >' + text + '</div>';
 
 			contents.scrollTop = 0;
 
@@ -705,7 +728,9 @@ summary h3 { display: inline; }
 	CON.setHighlightAndButtons = function( path, gallery ) {
 
 		var index, el, col, folder, indexNext, indexPrevious;
+
 //highlight
+
 		if ( gallery ) {
 
 			index = TOO.files.indexOf( '!' + path );
@@ -825,7 +850,11 @@ summary h3 { display: inline; }
 ### DabDab
 * [Read Me]( #dabdab/README.md )
 ### TooToo
-* [Read Me]( #tootoo3/README.md )
+* [Read Me]( #tootoo/README.md )
+### Utilities
+* [Make Read Me Read Me]( #tootoo/r3/utilities/make-github-readme/README.md )
+* [Merge Files into one]( #tootoo/r3/utilities/merge-files-into-one/README.md )
+
 `;
 
 	init();
