--- a/tootoo/r3/dev-custom/tootoo3-pushme-pullyou.html
+++ b/tootoo/r3/dev-custom/tootoo3-pushme-pullyou.html
@@ -76,7 +76,10 @@
 ### DabDab
 * [Read Me]( #dabdab/README.md )
 ### TooToo
+Can we say little things here?
 * [Read Me]( #tootoo/README.md )
+	* [All in One]( #tootoo/r3/all-in-one/README.md )
+	* [All in One Custom]( #tootoo/r3/all-in-one-custom/README.md )
 ### Utilities
 * [Make Read Me Read Me]( #tootoo/r3/utilities/make-github-readme/README.md )
 * [Merge Files into one]( #tootoo/r3/utilities/merge-files-into-one/README.md )
